# personal-web-app.rs

./: Cargo.toml  README.md  index.html  personal.db  styles.css
admin-panel/backend/: Cargo.toml
admin-panel/backend/src/: main.rs
admin-panel/backend/src/db/: mod.rs
admin-panel/backend/src/routes/: contact_route.rs  mod.rs  project_route.rs  user_route.rs  work_experience_route.rs
admin-panel/frontend/: Cargo.toml  index.html
admin-panel/frontend/src/: main.rs
admin-panel/frontend/src/components/: contact_form.rs  mod.rs  project_form.rs  user_form.rs  work_experience_form.rs
admin-panel/frontend/src/models/: contact.rs  mod.rs  project.rs  user.rs  work_experience.rs
admin-panel/frontend/src/services/: contact.rs  mod.rs  project.rs  user.rs  work_experience.rs
backend/: .env  Cargo.toml  personal.db
backend/src/: main.rs
backend/src/routes/: contact_routes.rs  mod.rs  project_routes.rs  user_routes.rs  work_experience_routes.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: about_section.rs  contacts_section.rs  header.rs  mod.rs  projects_section.rs  work_experience_section.rs
frontend/src/services/: mod.rs  user_service.rs
src/: main.rs
