[package]
name = "therasuldev-web-app"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"